# errands

./: README.md  data.toml.example  pyproject.toml
errands/: main.py  model.py  next_run.py  prompt.py
