[project]
name = "errands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llm>=0.26",
    "llm-gemini>=0.22",
    "pydantic>=2.11.5",
    "tomlkit>=0.13.3",
]

[tool.ruff]
indent-width = 2

[tool.ruff.lint]
select = ["I"]

